@@ -50,11 +50,12 @@ struct BPF_MAP_CREATE_struct {
 	uint32_t btf_key_type_id;
 	uint32_t btf_value_type_id;
 	uint32_t btf_vmlinux_value_type_id;
+	uint64_t ATTRIBUTE_ALIGNED(8) map_extra;
 };
 
 # define BPF_MAP_CREATE_struct_size \
 	sizeof(struct BPF_MAP_CREATE_struct)
-# define expected_BPF_MAP_CREATE_struct_size 64
+# define expected_BPF_MAP_CREATE_struct_size 72
 
 struct BPF_MAP_LOOKUP_ELEM_struct {
 	uint32_t map_fd;
@@ -310,11 +311,13 @@ struct bpf_map_info_struct {
 	uint32_t btf_id;
 	uint32_t btf_key_type_id;
 	uint32_t btf_value_type_id;
+	uint32_t pad;
+	uint64_t ATTRIBUTE_ALIGNED(8) map_extra;
 };
 
 # define bpf_map_info_struct_size \
-	offsetofend(struct bpf_map_info_struct, btf_value_type_id)
-# define expected_bpf_map_info_struct_size 76
+	sizeof(struct bpf_map_info_struct)
+# define expected_bpf_map_info_struct_size 88
 
 struct bpf_prog_info_struct {
 	uint32_t type;
